--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="imgdiv">
                   <img src="img/pic.png" alt="" />
                 </div>
-                <div class="text-container">
+                <div class="text-container-div">
                   <div class="title">
                     <h2>Web Development</h2>
                   </div>
@@ -26,16 +26,16 @@
                       <div><p>150 USD</p></div>
                     </div>
                     <div>
-                      <p class="cls">300 class</p>
+                      <p class="class">300 class</p>
                     </div>
                   </div>
                   <hr>
                   <div class="footer">
-                    <div class="btn">
+                    <div class="button">
                       <p>300h 50m 2s</p>
                     </div>
                     <div>
-                      <p class="cls">By CVIT</p>
+                      <p class="class">By CVIT</p>
                     </div>
                   </div>
                 </div>
@@ -45,7 +45,7 @@
                 <div class="imgdiv">
                   <img src="img/pic.png" alt="" />
                 </div>
-                <div class="text-container">
+                <div class="text-container-div">
                   <div class="title">
                     <h2>Web Development</h2>
                   </div>
@@ -55,16 +55,16 @@
                       <div><p>150 USD</p></div>
                     </div>
                     <div>
-                      <p class="cls">300 class</p>
+                      <p class="class">300 class</p>
                     </div>
                   </div>
                   <hr />
                   <div class="footer">
-                    <div class="btn">
+                    <div class="button">
                       <p>300h 50m 2s</p>
                     </div>
                     <div>
-                      <p class="cls">By CVIT</p>
+                      <p class="class">By CVIT</p>
                     </div>
                   </div>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="imgdiv">
                   <img src="img/pic.png" alt="" />
                 </div>
-                <div class="text-container">
+                <div class="text-container-div">
                   <div class="title">
                     <h2>Web Development</h2>
                   </div>
@@ -83,16 +83,16 @@
                       <div><p>150 USD</p></div>
                     </div>
                     <div>
-                      <p class="cls">300 class</p>
+                      <p class="class">300 class</p>
                     </div>
                   </div>
                   <hr />
                   <div class="footer">
-                    <div class="btn">
+                    <div class="button">
                       <p>300h 50m 2s</p>
                     </div>
                     <div>
-                      <p class="cls">By CVIT</p>
+                      <p class="class">By CVIT</p>
                     </div>
                   </div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="imgdiv">
                   <img src="img/pic.png" alt="" />
                 </div>
-                <div class="text-container">
+                <div class="text-container-div">
                   <div class="title">
                     <h2>Web Development</h2>
                   </div>
@@ -111,16 +111,16 @@
                       <div><p>150 USD</p></div>
                     </div>
                     <div>
-                      <p class="cls">300 class</p>
+                      <p class="class">300 class</p>
                     </div>
                   </div>
                   <hr />
                   <div class="footer">
-                    <div class="btn">
+                    <div class="button">
                       <p>300h 50m 2s</p>
                     </div>
                     <div>
-                      <p class="cls">By CVIT</p>
+                      <p class="class">By CVIT</p>
                     </div>
                   </div>
                 </div>
@@ -129,7 +129,7 @@
                 <div class="imgdiv">
                   <img src="img/pic.png" alt="" />
                 </div>
-                <div class="text-container">
+                <div class="text-container-div">
                   <div class="title">
                     <h2>Web Development</h2>
                   </div>
@@ -139,16 +139,16 @@
                       <div><p>150 USD</p></div>
                     </div>
                     <div>
-                      <p class="cls">300 class</p>
+                      <p class="class">300 class</p>
                     </div>
                   </div>
                   <hr />
                   <div class="footer">
-                    <div class="btn">
+                    <div class="button">
                       <p>300h 50m 2s</p>
                     </div>
                     <div>
-                      <p class="cls">By CVIT</p>
+                      <p class="class">By CVIT</p>
                     </div>
                   </div>
                 </div>
@@ -157,7 +157,7 @@
                 <div class="imgdiv">
                   <img src="img/pic.png" alt="" />
                 </div>
-                <div class="text-container">
+                <div class="text-container-div">
                   <div class="title">
                     <h2>Web Development</h2>
                   </div>
@@ -167,16 +167,16 @@
                       <div><p>150 USD</p></div>
                     </div>
                     <div>
-                      <p class="cls">300 class</p>
+                      <p class="class">300 class</p>
                     </div>
                   </div>
                   <hr />
                   <div class="footer">
-                    <div class="btn">
+                    <div class="button">
                       <p>300h 50m 2s</p>
                     </div>
                     <div>
-                      <p class="cls">By CVIT</p>
+                      <p class="class">By CVIT</p>
                     </div>
                   </div>
                 </div>
