--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 </div>
                 <div class="text-container-div">
                   <div class="title">
-                    <h2>Web Development</h2>
+                    <h2>Web Design</h2>
                   </div>
                   <div class="body">
                     <div class="image-div">
                       <div><img src="img/icon.png" alt="" /></div>
-                      <div><p>150 USD</p></div>
+                      <div><p class="p">150 USD</p></div>
                     </div>
                     <div>
                       <p class="class">300 class</p>
@@ -32,9 +32,9 @@
                   <hr>
                   <div class="footer">
                     <div class="button">
-                      <p>300h 50m 2s</p>
+                      <p class="clr">300h 50m 2s</p>
                     </div>
-                    <div>
+                    <div class="color">
                       <p class="class">By CVIT</p>
                     </div>
                   </div>
@@ -52,7 +52,7 @@
                   <div class="body">
                     <div class="image-div">
                       <div><img src="img/icon.png" alt="" /></div>
-                      <div><p>150 USD</p></div>
+                      <div><p class="p">150 USD</p></div>
                     </div>
                     <div>
                       <p class="class">300 class</p>
@@ -61,9 +61,9 @@
                   <hr />
                   <div class="footer">
                     <div class="button">
-                      <p>300h 50m 2s</p>
+                      <p class="clr">300h 50m 2s</p>
                     </div>
-                    <div>
+                    <div class="color">
                       <p class="class">By CVIT</p>
                     </div>
                   </div>
@@ -75,12 +75,12 @@
                 </div>
                 <div class="text-container-div">
                   <div class="title">
-                    <h2>Web Development</h2>
+                    <h2>App Development</h2>
                   </div>
                   <div class="body">
                     <div class="image-div">
                       <div><img src="img/icon.png" alt="" /></div>
-                      <div><p>150 USD</p></div>
+                      <div><p class="p">150 USD</p></div>
                     </div>
                     <div>
                       <p class="class">300 class</p>
@@ -89,9 +89,9 @@
                   <hr />
                   <div class="footer">
                     <div class="button">
-                      <p>300h 50m 2s</p>
+                      <p class="clr">300h 50m 2s</p>
                     </div>
-                    <div>
+                    <div class="color">
                       <p class="class">By CVIT</p>
                     </div>
                   </div>
@@ -103,12 +103,12 @@
                 </div>
                 <div class="text-container-div">
                   <div class="title">
-                    <h2>Web Development</h2>
+                    <h2>CPA Marketing</h2>
                   </div>
                   <div class="body">
                     <div class="image-div">
                       <div><img src="img/icon.png" alt="" /></div>
-                      <div><p>150 USD</p></div>
+                      <div><p class="p">150 USD</p></div>
                     </div>
                     <div>
                       <p class="class">300 class</p>
@@ -117,9 +117,9 @@
                   <hr />
                   <div class="footer">
                     <div class="button">
-                      <p>300h 50m 2s</p>
+                      <p class="clr">300h 50m 2s</p>
                     </div>
-                    <div>
+                    <div class="color">
                       <p class="class">By CVIT</p>
                     </div>
                   </div>
@@ -131,12 +131,12 @@
                 </div>
                 <div class="text-container-div">
                   <div class="title">
-                    <h2>Web Development</h2>
+                    <h2>Graphics Design</h2>
                   </div>
                   <div class="body">
                     <div class="image-div">
                       <div><img src="img/icon.png" alt="" /></div>
-                      <div><p>150 USD</p></div>
+                      <div><p class="p">150 USD</p></div>
                     </div>
                     <div>
                       <p class="class">300 class</p>
@@ -145,9 +145,9 @@
                   <hr />
                   <div class="footer">
                     <div class="button">
-                      <p>300h 50m 2s</p>
+                      <p class="clr">300h 50m 2s</p>
                     </div>
-                    <div>
+                    <div class="color">
                       <p class="class">By CVIT</p>
                     </div>
                   </div>
@@ -159,12 +159,12 @@
                 </div>
                 <div class="text-container-div">
                   <div class="title">
-                    <h2>Web Development</h2>
+                    <h2>Degital Marketing</h2>
                   </div>
                   <div class="body">
                     <div class="image-div">
                       <div><img src="img/icon.png" alt="" /></div>
-                      <div><p>150 USD</p></div>
+                      <div><p class="p">150 USD</p></div>
                     </div>
                     <div>
                       <p class="class">300 class</p>
@@ -173,9 +173,9 @@
                   <hr />
                   <div class="footer">
                     <div class="button">
-                      <p>300h 50m 2s</p>
+                      <p class="clr">300h 50m 2s</p>
                     </div>
-                    <div>
+                    <div class="color">
                       <p class="class">By CVIT</p>
                     </div>
                   </div>
